// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/dashboard/inventory/outputs > sin filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "material": true,
        "usuario": true,
      },
      "orderBy": [
        {
          "fecha_movimiento": "desc",
        },
        {
          "id_movimiento": "desc",
        },
      ],
      "skip": 0,
      "take": 20,
      "where": {
        "AND": [
          {
            "tipo_movimiento": "salida",
          },
        ],
      },
    },
    "prisma": "movimiento_inventario.findMany",
  },
  {
    "args": {
      "where": {
        "AND": [
          {
            "tipo_movimiento": "salida",
          },
        ],
      },
    },
    "prisma": "movimiento_inventario.count",
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "id_material": true,
        "nombre_material": true,
      },
    },
    "prisma": "material.findMany",
  },
  {
    "args": {
      "orderBy": {
        "fecha_inicio": "desc",
      },
      "select": {
        "id_orden_trabajo": true,
      },
    },
    "prisma": "orden_trabajo.findMany",
  },
]
`;

exports[`/dashboard/inventory/outputs > sin filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<span aria-current="page">Salidas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Salidas de inventario</h1>
<p>Movimientos de salida asociados a producción u otros motivos.</p>
</div>
</div>
<div>
<a data-variant="default" href="/dashboard/inventory/outputs/new">Registrar salida</a>
</div>
</div>
</section>
<form action="/dashboard/inventory/outputs">
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar salida..." name="q" value=""/>
</div>
<div>
<label for="material">Material</label>
<select id="material" name="material">
<option value="" selected="">Todos los materiales</option>
<option value="id_material-1">nombre_material-1</option>
<option value="id_material-2">nombre_material-2</option>
</select>
</div>
<div>
<label for="order">Orden</label>
<select id="order" name="order">
<option value="" selected="">Todas las órdenes</option>
<option value="id_orden_trabajo-1">id_orden_trabajo-1</option>
<option value="id_orden_trabajo-2">id_orden_trabajo-2</option>
</select>
</div>
<div>
<label for="from">Desde</label>
<input type="date" id="from" name="from" value=""/>
</div>
<div>
<label for="to">Hasta</label>
<input type="date" id="to" name="to" value=""/>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/inventory/outputs">Limpiar filtros</a>
</div>
</form>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Fecha</th>
<th>Material</th>
<th>Orden</th>
<th>Responsable</th>
<th>Cantidad</th>
<th>Stock resultante</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_movimiento-1</td>
<td>1/7/2026</td>
<td>nombre_material-1</td>
<td>id_orden_trabajo-1</td>
<td>usuario-1</td>
<td>11.50</td>
<td>11.50</td>
<td>
<a data-variant="outline" href="/dashboard/production/work-orders/id_orden_trabajo-1">Ver orden</a>
</td>
</tr>
<tr>
<td>id_movimiento-2</td>
<td>2/7/2026</td>
<td>nombre_material-2</td>
<td>-</td>
<td>usuario-2</td>
<td>22.50</td>
<td>22.50</td>
<td>-</td>
</tr>
</tbody>
</table>
</div>
<div>
<p>Mostrando 1-20 de 42 salidas · Página 1 de 3</p>
<div>
<button data-variant="outline" disabled="">Anterior</button>
<a data-variant="outline" href="/dashboard/inventory/outputs?page=2">Siguiente</a>
</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/inventory/outputs > todos los filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "material": true,
        "usuario": true,
      },
      "orderBy": [
        {
          "fecha_movimiento": "desc",
        },
        {
          "id_movimiento": "desc",
        },
      ],
      "skip": 20,
      "take": 20,
      "where": {
        "AND": [
          {
            "tipo_movimiento": "salida",
          },
          {
            "OR": [
              {
                "id_orden_trabajo": {
                  "contains": "OT",
                  "mode": "insensitive",
                },
              },
              {
                "material": {
                  "nombre_material": {
                    "contains": "OT",
                    "mode": "insensitive",
                  },
                },
              },
              {
                "usuario": {
                  "usuario": {
                    "contains": "OT",
                    "mode": "insensitive",
                  },
                },
              },
            ],
          },
          {
            "id_material": "MAT00000001",
          },
          {
            "id_orden_trabajo": "ORT00000001",
          },
          {
            "fecha_movimiento": {
              "gte": 2026-07-01T00:00:00.000Z,
              "lte": 2026-07-31T23:59:59.999Z,
            },
          },
        ],
      },
    },
    "prisma": "movimiento_inventario.findMany",
  },
  {
    "args": {
      "where": {
        "AND": [
          {
            "tipo_movimiento": "salida",
          },
          {
            "OR": [
              {
                "id_orden_trabajo": {
                  "contains": "OT",
                  "mode": "insensitive",
                },
              },
              {
                "material": {
                  "nombre_material": {
                    "contains": "OT",
                    "mode": "insensitive",
                  },
                },
              },
              {
                "usuario": {
                  "usuario": {
                    "contains": "OT",
                    "mode": "insensitive",
                  },
                },
              },
            ],
          },
          {
            "id_material": "MAT00000001",
          },
          {
            "id_orden_trabajo": "ORT00000001",
          },
          {
            "fecha_movimiento": {
              "gte": 2026-07-01T00:00:00.000Z,
              "lte": 2026-07-31T23:59:59.999Z,
            },
          },
        ],
      },
    },
    "prisma": "movimiento_inventario.count",
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "id_material": true,
        "nombre_material": true,
      },
    },
    "prisma": "material.findMany",
  },
  {
    "args": {
      "orderBy": {
        "fecha_inicio": "desc",
      },
      "select": {
        "id_orden_trabajo": true,
      },
    },
    "prisma": "orden_trabajo.findMany",
  },
]
`;

exports[`/dashboard/inventory/outputs > todos los filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<span aria-current="page">Salidas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Salidas de inventario</h1>
<p>Movimientos de salida asociados a producción u otros motivos.</p>
</div>
</div>
<div>
<a data-variant="default" href="/dashboard/inventory/outputs/new">Registrar salida</a>
</div>
</div>
</section>
<form action="/dashboard/inventory/outputs">
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar salida..." name="q" value="OT"/>
</div>
<div>
<label for="material">Material</label>
<select id="material" name="material">
<option value="">Todos los materiales</option>
<option value="id_material-1">nombre_material-1</option>
<option value="id_material-2">nombre_material-2</option>
</select>
</div>
<div>
<label for="order">Orden</label>
<select id="order" name="order">
<option value="">Todas las órdenes</option>
<option value="id_orden_trabajo-1">id_orden_trabajo-1</option>
<option value="id_orden_trabajo-2">id_orden_trabajo-2</option>
</select>
</div>
<div>
<label for="from">Desde</label>
<input type="date" id="from" name="from" value="2026-07-01"/>
</div>
<div>
<label for="to">Hasta</label>
<input type="date" id="to" name="to" value="2026-07-31"/>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
<a data-variant="clear" href="/dashboard/inventory/outputs">Limpiar filtros</a>
</div>
</form>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Fecha</th>
<th>Material</th>
<th>Orden</th>
<th>Responsable</th>
<th>Cantidad</th>
<th>Stock resultante</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_movimiento-1</td>
<td>1/7/2026</td>
<td>nombre_material-1</td>
<td>id_orden_trabajo-1</td>
<td>usuario-1</td>
<td>11.50</td>
<td>11.50</td>
<td>
<a data-variant="outline" href="/dashboard/production/work-orders/id_orden_trabajo-1">Ver orden</a>
</td>
</tr>
<tr>
<td>id_movimiento-2</td>
<td>2/7/2026</td>
<td>nombre_material-2</td>
<td>-</td>
<td>usuario-2</td>
<td>22.50</td>
<td>22.50</td>
<td>-</td>
</tr>
</tbody>
</table>
</div>
<div>
<p>Mostrando 21-40 de 42 salidas · Página 2 de 3</p>
<div>
<a data-variant="outline" href="/dashboard/inventory/outputs?q=OT&amp;material=MAT00000001&amp;order=ORT00000001&amp;from=2026-07-01&amp;to=2026-07-31&amp;page=1">Anterior</a>
<a data-variant="outline" href="/dashboard/inventory/outputs?q=OT&amp;material=MAT00000001&amp;order=ORT00000001&amp;from=2026-07-01&amp;to=2026-07-31&amp;page=3">Siguiente</a>
</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/inventory/outputs/new > formulario > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "id_material": true,
        "nombre_material": true,
        "stock_actual": true,
        "stock_reservado": true,
        "unidad_medida": true,
      },
      "where": {
        "estado": true,
      },
    },
    "prisma": "material.findMany",
  },
  {
    "args": {
      "orderBy": {
        "fecha_inicio": "desc",
      },
      "select": {
        "estado": true,
        "id_orden_trabajo": true,
      },
      "where": {
        "estado": {
          "notIn": [
            "finalizada",
            "cancelada",
          ],
        },
      },
    },
    "prisma": "orden_trabajo.findMany",
  },
]
`;

exports[`/dashboard/inventory/outputs/new > formulario > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory/outputs">Salidas</a>
</li>
<li>
<svg/>
<span aria-current="page">Registrar salida</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Registrar salida de inventario</h1>
<p>La salida descuenta stock actual y registra stock anterior/resultante.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a salidas">
<svg/>Volver a salidas</button>
</div>
</div>
</section>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<div>
<div>
<label for="id_material">Material</label>
<select id="id_material" name="id_material" required="">
<option value="">Seleccione material</option>
<option value="id_material-1">nombre_material-1 (0.00 unidad_medida-1 disponible)</option>
<option value="id_material-2">nombre_material-2 (0.00 unidad_medida-2 disponible)</option>
</select>
</div>
<div>
<label for="id_orden_trabajo">Orden de trabajo</label>
<select id="id_orden_trabajo" name="id_orden_trabajo">
<option value="">Sin orden asociada</option>
<option value="id_orden_trabajo-1">id_orden_trabajo-1 - estado-1</option>
<option value="id_orden_trabajo-2">id_orden_trabajo-2 - estado-2</option>
</select>
</div>
</div>
<div>
<label for="cantidad">Cantidad</label>
<input type="number" id="cantidad" min="0.01" step="0.01" required="" name="cantidad"/>
</div>
<div>
<label for="motivo">Motivo</label>
<textarea id="motivo" name="motivo" rows="4" required="">
</textarea>
</div>
<div>
<button data-variant="default" type="submit">Registrar salida</button>
<a data-variant="outline" href="/dashboard/inventory/outputs">Cancelar</a>
</div>
</form>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;

exports[`/dashboard/inventory/outputs/new > maestro de taller > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "id_material": true,
        "nombre_material": true,
        "stock_actual": true,
        "stock_reservado": true,
        "unidad_medida": true,
      },
      "where": {
        "estado": true,
      },
    },
    "prisma": "material.findMany",
  },
  {
    "args": {
      "orderBy": {
        "fecha_inicio": "desc",
      },
      "select": {
        "estado": true,
        "id_orden_trabajo": true,
      },
      "where": {
        "estado": {
          "notIn": [
            "finalizada",
            "cancelada",
          ],
        },
      },
    },
    "prisma": "orden_trabajo.findMany",
  },
]
`;

exports[`/dashboard/inventory/outputs/new > maestro de taller > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory">Inventario</a>
</li>
<li>
<svg/>
<a href="/dashboard/inventory/outputs">Salidas</a>
</li>
<li>
<svg/>
<span aria-current="page">Registrar salida</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Registrar salida de inventario</h1>
<p>La salida descuenta stock actual y registra stock anterior/resultante.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a salidas">
<svg/>Volver a salidas</button>
</div>
</div>
</section>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<div>
<div>
<label for="id_material">Material</label>
<select id="id_material" name="id_material" required="">
<option value="">Seleccione material</option>
<option value="id_material-1">nombre_material-1 (0.00 unidad_medida-1 disponible)</option>
<option value="id_material-2">nombre_material-2 (0.00 unidad_medida-2 disponible)</option>
</select>
</div>
<div>
<label for="id_orden_trabajo">Orden de trabajo</label>
<select id="id_orden_trabajo" name="id_orden_trabajo">
<option value="">Sin orden asociada</option>
<option value="id_orden_trabajo-1">id_orden_trabajo-1 - estado-1</option>
<option value="id_orden_trabajo-2">id_orden_trabajo-2 - estado-2</option>
</select>
</div>
</div>
<div>
<label for="cantidad">Cantidad</label>
<input type="number" id="cantidad" min="0.01" step="0.01" required="" name="cantidad"/>
</div>
<div>
<label for="motivo">Motivo</label>
<textarea id="motivo" name="motivo" rows="4" required="">
</textarea>
</div>
<div>
<button data-variant="default" type="submit">Registrar salida</button>
<a data-variant="outline" href="/dashboard/inventory/outputs">Cancelar</a>
</div>
</form>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;
